# hy

./: .coveragerc  .coveralls.yml  .deepsource.toml  .git-blame-ignore-revs  .gitignore  .isort.cfg  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CONTRIBUTING.rst  COPYRIGHT  ChangeLog  Dockerfile  LICENSE  MANIFEST.in  Makefile  NEWS  NEWS.rst  README.md  README.rst  REFACTOR  TODO  appveyor.yml  conftest.py  example  fastentrypoints.py  finish_install.py  get_version.py  grammar.md  hy.pth  hylander.hy  issue_template.md  main.py  make.bat  pyproject.toml  requirements-dev.txt  requirements-site.txt  requirements-travis.txt  (+6 more)
demo/: .gitignore  Makefile  app.py  devel.sh
docs/: .gitignore  Makefile  api.rst  build.sh  cheatsheet.json  cli.rst  conf.py  coreteam.rst  env_var.rst  hacking.rst  index.rst  internals.rst  interop.rst  loader.rst  macros.rst  make.bat  model_patterns.rst  quickref.rst  quickstart.rst  repl.rst  requirements.txt  semantics.rst  style-guide.rst  syntax.rst  testing.rst  tutorial.rst  versioning.rst  whyhy.rst
docs-txts/: api.txt  cli.txt  env_var.txt  hacking.txt  index.txt  interop.txt  macros.txt  model_patterns.txt  repl.txt  semantics.txt  syntax.txt  tutorial.txt  versioning.txt  whyhy.txt
eg/: ma-legs.hy  pkginfo.hy  repl.hy  yo-dawg.hy
hy/: __init__.py  __main__.py  _compat.hysource  _compat.py  _compat.py2  _compat.pyorig  cmdline.hysource  cmdline.py  compat.py  compiler.hysource  compiler.py  compiler.pyorig  completer.hy  completer.hysource  completer.py  completer.py2  errors.hysource  errors.py  (+27 more)
(+388 files in other folders)
